# Q_Event_show_v_cube_max

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sql.md
app/: __init__.py
app/bot/: __init__.py  gates.py  intro_media.py  main.py  router.py  scheduler.py  states.py
app/bot/handlers/: __init__.py  admin.py  main_menu.py  onboarding.py  play.py  round1.py  round2.py  round3.py
app/bot/logic/: __init__.py  onboarding_core.py
app/bot/middlewares/: __init__.py  access.py
app/core/: __init__.py  config.py  logging.py  time.py
app/db/: __init__.py  base.py
app/db/migrations/: env.py
app/db/models/: __init__.py  answer.py  audit.py  broadcast.py  progress.py  round.py  round_question.py  user.py  winner.py
app/max_platform/: __init__.py  access_gate.py  client.py  dispatcher.py  fsm_memory.py  parse_update.py  poll_updates.py  runner.py  shim.py  telegram_markup.py  update_batch.py
app/messaging/: __init__.py  broadcast_adapter.py  errors.py
app/services/: __init__.py  admin_export.py  admin_progress_reset.py  broadcast_dispatch.py  broadcast_plan.py  broadcast_segments.py  email_validation.py  game_state_reset.py  round1_play.py  round2_play.py  round_schedule.py  tour_start_push.py  user_service.py  winner_ranking.py  winner_selection.py
content/: broadcasts.yaml  round1.yaml  round2.yaml  round3.yaml
docs/: MAX_PORTING.md
materials/: Q-CLUB.md  TZ_NORMALIZED.md  additonal_conditione.md  tz.md
scripts/: prelaunch_clean.py  repair_r2_answers_after_seed.py  reset_all_game_state.py  screen_max_attach.sh  screen_max_common.sh  screen_max_start.sh  screen_max_status.sh  screen_max_stop.sh  seed_content.py
tests/: conftest.py  test_admin_export_db.py  test_admin_handlers_unit.py  test_admin_progress_reset.py  test_admin_winner_pick.py  test_broadcast_dispatch.py  test_broadcast_plan.py  test_broadcast_plan_db.py  test_broadcast_segments_db.py  test_config.py  test_email_validation.py  test_max_update_order.py  test_models_full_smoke.py  test_models_smoke.py  test_round1_play.py  test_round2_topics.py  test_round3_content.py  test_seed_yaml.py  test_smoke.py  test_time.py  test_tour_start_push.py  test_winner_selection.py
(+5 files in other folders)
